--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </header>
      <div class="top-wrapper">
       <div class="container">
-        <h1>BELAJAR CODING.</h1>
-        <h1>BELAJAR MENJADI LEBIH KREATIF.</h1>
+        <h1>TUGAS CODING KELOMPOK A04.</h1>
+        <h1>KELOMPOK A04.</h1>
         <p>Progate adalah platform online untuk belajar coding.</p>
         <p>Kami menawarkan lingkungan pemograman yang lengkap untuk mempermudah Anda memulai.</p>
         <div class="btn-wrapper">
