--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           <a href="#">Lifestyle</a>
           <a href="#">Properti</a>
           <a href="#">Bola</a>
-          <!--<a href="#">Travel</a>
+          <a href="#">Travel</a>
           <a href="#">Otomotif</a>
-          <a href="#">SAINS</a>-->
+          <a href="#">SAINS</a>
         </div>
 
       </div>
