--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <body>
     <header>
       <div class="container">
-        <!--<div class="header-left">
+        <div class="header-left">
           <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
-        </div>-->
+        </div>
         <!-- Tambahkan ikon menu di sini -->
         <span class="fa fa-bars menu-icon"></span>
 
