--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+          <img class="logo" src="https://cdn.pixabay.com/photo/2017/06/10/07/22/news-2389226_960_720.png">
         </div>
         <!-- Tambahkan ikon menu di sini -->
         <span class="fa fa-bars menu-icon"></span>
