--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       <div class="container">
         <h1>TUGAS CODING KELOMPOK A04.</h1>
         <h1>KELOMPOK A04.</h1>
-        <p>Progate adalah platform online untuk belajar coding.</p>
-        <p>Kami menawarkan lingkungan pemograman yang lengkap untuk mempermudah Anda memulai.</p>
+        <p>Portal Berita A04 Tugas Progate Pada Digital Talent Scholarship.</p>
+        <p>Berisi tentang berita yang lengkap untuk memberikan update terkini berita.</p>
         <div class="btn-wrapper">
           <a href="#" class="btn signup">Daftar dengan Email</a>
           <p>atau</p>
