--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <div class="section-content">
             <ul class="nice-list">
               <li>
-                <div class="left"><a href="#">Mardani Maming..</a></div>
+                <div class="left"><a href="#">Mardani Maming.</a></div>
                 <div class="right">20.49</div>
                 <div class="clearer">&nbsp;</div>
               </li>
