--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="clearer">&nbsp;</div>
           </div>
           <div class="section-content">
-            <ul class="nice-list">
+            <ul class="nice-list" style="list-style-type:none">
               <li>
                 <div class="left"><a href="#">Mardani Maming.</a></div>
                 <div class="right">20.49</div>
@@ -179,14 +179,14 @@
           <div class="section-title">Most Viewed</div>
           <div class="section-content">
             <ul class="nice-list">
-              <li><span class="quiet">1.</span> <a href="#">Giliran Razman Arif Nasution</a></li>
-              <li><span class="quiet">2.</span> <a href="#">Prajurit TNI Yahokimo</a></li>
-              <li><span class="quiet">3.</span> <a href="#">Duta Kejaksaan</a></li>
-              <li><span class="quiet">4.</span> <a href="#">Fenomena Citayam Fashion Week</a></li>
-              <li><span class="quiet">5.</span> <a href="#">Barcelona</a></li>
-              <li><span class="quiet">6.</span> <a href="#">Real Madrid</a></li>
-              <li><span class="quiet">7.</span> <a href="#">Juventus</a></li>
-              <li><span class="quiet">8.</span> <a href="#">Manchester City</a></li>
+              <li><span class="quiet"></span> <a href="#">Giliran Razman Arif Nasution</a></li>
+              <li><span class="quiet"></span> <a href="#">Prajurit TNI Yahokimo</a></li>
+              <li><span class="quiet"></span> <a href="#">Duta Kejaksaan</a></li>
+              <li><span class="quiet"></span> <a href="#">Fenomena Citayam Fashion Week</a></li>
+              <li><span class="quiet"></span> <a href="#">Barcelona</a></li>
+              <li><span class="quiet"></span> <a href="#">Real Madrid</a></li>
+              <li><span class="quiet"></span> <a href="#">Juventus</a></li>
+              <li><span class="quiet"></span> <a href="#">Manchester City</a></li>
               <li><a href="#" class="more">Browse all &#187;</a></li>
             </ul>
           </div>
