--- a/index.html
+++ b/index.html
@@ -140,35 +140,35 @@
             <div class="clearer">&nbsp;</div>
           </div>
           <div class="section-content">
-            <ul class="nice-list" style="list-style-type:none">
+            <ul class="nice-list" style="list-style-type:square">
               <li>
                 <div class="left"><a href="#">Mardani Maming.</a></div>
-                <div class="right">20.49</div>
+                <!--<div class="right">20.49</div>-->
                 <div class="clearer">&nbsp;</div>
               </li>
               <li>
                 <div class="left"><a href="#">Roy Suryo</a></div>
-                <div class="right">20:40</div>
+                <!--<div class="right">20:40</div>-->
                 <div class="clearer">&nbsp;</div>
               </li>
               <li>
                 <div class="left"><a href="#">Istri TNI ditembak</a></div>
-                <div class="right">19:56</div>
+                <!--<div class="right">19:56</div>-->
                 <div class="clearer">&nbsp;</div>
               </li>
               <li>
                 <div class="left"><a href="#">Polisi Tembak Polisi</a></div>
-                <div class="right">19:15</div>
+                <!--<div class="right">19:15</div>-->
                 <div class="clearer">&nbsp;</div>
               </li>
               <li>
                 <div class="left"><a href="#">Pernikahan mutiara anis baswedan</a></div>
-                <div class="right">19:06</div>
+                <!--<div class="right">19:06</div>-->
                 <div class="clearer">&nbsp;</div>
               </li>
               <li>
                 <div class="left"><a href="#">Prajurit TNI Yahokimo ditembak Brimob</a></div>
-                <div class="right">18:51</div>
+                <!--<div class="right">18:51</div>-->
                 <div class="clearer">&nbsp;</div>
               </li>
               <li><a href="#" class="more">Browse all &#187;</a></li>
