--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="clearer">&nbsp;</div>
           </div>
           <div class="section-content">
-            <ul class="nice-list" style="list-style-type:square">
+            <ul class="nice-list" style="list-style-type:none">
               <li>
                 <div class="left"><a href="#">Mardani Maming.</a></div>
                 <!--<div class="right">20.49</div>-->
