add: layout visual interaktif

--- a/index.html
+++ b/index.html
@@ -287,6 +287,50 @@
     </div>
   </div> -->
 
+  <!-- Visual Interaktif -->
+
+  <div class="visual-interaktif">
+    <div class="judul-visual">
+      <img src="https://asset.kompas.com/data/2017/wp/images/logo-vik.png" alt="">
+      <hr>
+    </div>
+    <div class="visual-1">
+      <img
+        src="https://asset.kompas.com/crops/X9C6ffbbV0o7vVSvTPhkRwM1dEc=/0x0:0x0/245x163/data/photo/2022/04/22/6263130ad2e7d.jpg"
+        alt="">
+      <img
+        src="https://asset.kompas.com/crops/YisggdWPKWgh2aHvF13qokkC6QI=/0x0:0x0/245x163/data/photo/2022/06/17/62abdc870ef39.jpg"
+        alt="">
+      <img
+        src="https://asset.kompas.com/crops/FAxFM3u_zR0W4WrnvXtz0XhUuuY=/0x0:0x0/245x163/data/photo/2022/02/16/620ca1681dbae.jpg"
+        alt="">
+      <img
+        src="https://asset.kompas.com/crops/9xE3_LKeXiohN8BoxZ34lBaQAig=/0x0:0x0/245x163/data/photo/2022/03/31/62457ac2c992d.jpg"
+        alt="">
+    </div>
+    <div class="visual-2">
+      <div class="deskripsi">
+        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+      </div>
+      <div class="deskripsi">
+        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+      </div>
+      <div class="deskripsi">
+        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+      </div>
+      <div class="deskripsi">
+        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- END -->
+
   <!-- For PC -->
   <div class="footer-pc">
     <div class="row footer-bottom container">
