--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
   <div class="visual-interaktif">
     <div class="judul-visual">
-      <img src="https://asset.kompas.com/data/2017/wp/images/logo-vik.png" alt="">
+      <!--<img src="https://asset.kompas.com/data/2017/wp/images/logo-vik.png" alt="">-->
       <hr>
     </div>
     <div class="visual-1">
@@ -310,20 +310,20 @@
     </div>
     <div class="visual-2">
       <div class="deskripsi">
-        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        <h3>Komik.</h3>
+        <p> Kisah lucu di kala Senja. </p>
       </div>
       <div class="deskripsi">
-        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        <h3>Beautiful Indonesia.</h3>
+        <p>Beautiful Indonesia. </p>
       </div>
       <div class="deskripsi">
-        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        <h3>Komunitas.</h3>
+        <p>Komunitas Berita. </p>
       </div>
       <div class="deskripsi">
-        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        <h3>Kasih Saran.</h3>
+        <p>Kasih Saran. </p>
       </div>
 
     </div>
