--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
       <p>Portal Berita A04 Tugas Progate Pada Digital Talent Scholarship.</p>
       <p>Berisi tentang berita yang lengkap untuk memberikan update terkini berita.</p>
       <div class="btn-wrapper">
-        <a href="#" class="btn signup">Daftar dengan Email</a>
+        <!--<a href="#" class="btn signup">Daftar dengan Email</a>
         <p>atau</p>
         <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>
+        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>-->
       </div>
     </div>
   </div>
